FEAT: update related reference in job detail render page

--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -122,49 +122,7 @@
 
             <div class="related-posts">
                 <h3 class="related-posts__title">Các bài viết liên quan</h3>
-
-                <div class="related-grid">
-                    <!-- Related item 1 -->
-                    <article class="related-card">
-                        <a href="./blog_detail.html">
-                            <div class="related-thumb">
-                                <img src="../assets/img/Slider_2.jpg" alt="Bài viết liên quan 1">
-                                <span class="related-badge">~ 37 / tháng</span>
-                            </div>
-
-                            <div class="related-titlebar">
-                                <h4>Tiêu đề bài viết liên quan 01 (bạn thay sau)</h4>
-                            </div>
-                        </a>
-                    </article>
-
-                    <!-- Related item 2 -->
-                    <article class="related-card">
-                        <a href="./blog_detail.html">
-                            <div class="related-thumb">
-                                <img src="../assets/img/Slider_3.jpg" alt="Bài viết liên quan 2">
-                                <span class="related-badge">~ 50 / tháng</span>
-                            </div>
-
-                            <div class="related-titlebar">
-                                <h4>Tiêu đề bài viết liên quan 02 (bạn thay sau)</h4>
-                            </div>
-                        </a>
-                    </article>
-
-                    <!-- Related item 3 -->
-                    <article class="related-card">
-                        <a href="./blog_detail.html">
-                            <div class="related-thumb">
-                                <img src="../assets/img/Edeka.jpg" alt="Bài viết liên quan 3">
-                                <span class="related-badge">~ 37 / tháng</span>
-                            </div>
-
-                            <div class="related-titlebar">
-                                <h4>Tiêu đề bài viết liên quan 03 (bạn thay sau)</h4>
-                            </div>
-                        </a>
-                    </article>
+                <div class="related-grid" id="relatedJobsGrid">
                 </div>
             </div>
 
