--- a/pages/contact.html
+++ b/pages/contact.html
@@ -53,16 +53,16 @@
                     <nav class="main-nav">
                         <ul class="nav">
                             <li class="has-dropdown">
-                                <div>
-                                    <a href="./recruit.html" class="dropdown-toggle">
+                                <div style="position: relative; height: 100%; display: flex; align-items: center;">
+                                    <a href="/pages/recruit.html" class="dropdown-toggle">
                                         Tuyển dụng
-                                        <!-- <span class="material-icons">arrow_drop_down</span> -->
+                                        <span class="material-icons"
+                                            style="font-size: 18px; margin-left: 4px; vertical-align: middle;">arrow_drop_down</span>
                                     </a>
-                                    <!-- <ul class="dropdown">
-                                        <li><a href="#">Cơ hội việc làm tại Đức</a></li>
-                                        <li><a href="#">Đào tạo tiếng Đức</a></li>
-                                        <li><a href="#">Quy trình tuyển dụng</a></li>
-                                    </ul> -->
+
+                                    <ul class="dropdown" id="jobDropdownList">
+                                        <li><a href="#">Đang tải công việc...</a></li>
+                                    </ul>
                                 </div>
                             </li>
 
@@ -360,6 +360,8 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <script src="/js/dropdown.js" defer></script>
     <script src="/js/contact_form_gas.js" defer></script>
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/main.js" defer></script>
