FEAT: Responsive for mobile and tablet ver 1

--- a/pages/blog_detail.html
+++ b/pages/blog_detail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKA.jpg">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <title>Bài viết | Sadaka HR</title>
 </head>
@@ -183,7 +184,7 @@
     <script src="/js/blog_data.js"></script>
     <script src="/js/blog_render.js"></script>
     <script src="/js/dropdown.js" defer></script>
-
+    <script src="/js/menu_responsive.js" defer></script>
 </body>
 
 </html>
