--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKA.jpg">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <title>Job Detail | Sadaka HR</title>
@@ -263,7 +264,7 @@
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/career.js" defer></script>
     <script src="/js/dropdown.js" defer></script>
-
+    <script src="/js/menu_responsive.js" defer></script>
     <!-- <script src="/js/job_detail_render.js" defer></script> -->
     <!-- <script src="/js/job_detail.js" defer></script> -->
 </body>
