--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="./assets/img/Logo_SADAKA.jpg">
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/responsive.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <title>Sadaka HR</title>
@@ -582,6 +583,7 @@
   <script src="/js/contact_fab.js" defer></script>
   <script src="/js/contact_form_gas.js" defer></script>
   <script src="/js/main.js" defer></script>
+  <script src="/js/menu_responsive.js" defer></script>
 </body>
 
 </html>
