--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKA.jpg">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <title>Giới thiệu | Sadaka HR</title>
@@ -386,7 +387,7 @@
     <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/dropdown.js" defer></script>
-
+    <script src="/js/menu_responsive.js" defer></script>
 </body>
 
 
