--- a/pages/training.html
+++ b/pages/training.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="../assets/img/Logo_SADAKA.jpg">
     <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/responsive.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
     <title>Đào tạo | Sadaka HR</title>
@@ -308,6 +309,7 @@
     <script src="/js/dropdown.js" defer></script>
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/main.js" defer></script>
+    <script src="/js/menu_responsive.js" defer></script>
 </body>
 
 
