FEAT: Update striping images in main page and fix hero slider of main page

--- a/index.html
+++ b/index.html
@@ -315,32 +315,41 @@
 
       <!-- Image Section -->
       <section class="image-strip-section">
-        <div class="container">
-          <div class="strip-grid">
+        <div class="strip-scroller">
+          <div class="strip-track">
+
             <div class="strip-item">
               <img src="./public/img/ThucTe_Duc_11.jpg" alt="Hoạt động Sadaka 1" />
-              <div class="strip-overlay"></div>
             </div>
-
             <div class="strip-item">
               <img src="./public/img/ThucTe_Duc_10.jpg" alt="Hoạt động Sadaka 2" />
-              <div class="strip-overlay"></div>
             </div>
-
             <div class="strip-item">
               <img src="./public/img/ThucTe_Duc_01.jpg" alt="Hoạt động Sadaka 3" />
-              <div class="strip-overlay"></div>
             </div>
-
             <div class="strip-item">
               <img src="./public/img/ThucTe_Duc_02.jpg" alt="Hoạt động Sadaka 4" />
-              <div class="strip-overlay"></div>
+            </div>
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_Duc_12.jpg" alt="Hoạt động Sadaka 5" />
             </div>
 
             <div class="strip-item">
-              <img src="./public/img/ThucTe_Duc_12.jpg" alt="Hoạt động Sadaka 5" />
-              <div class="strip-overlay"></div>
+              <img src="./public/img/ThucTe_Duc_02.jpg" alt="Hoạt động Sadaka 1" />
             </div>
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_Duc_09.jpg" alt="Hoạt động Sadaka 2" />
+            </div>
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_Duc_03.jpg" alt="Hoạt động Sadaka 3" />
+            </div>
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_03.jpg" alt="Hoạt động Sadaka 4" />
+            </div>
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_10.jpg" alt="Hoạt động Sadaka 5" />
+            </div>
+
           </div>
         </div>
       </section>
