--- a/pages/about.html
+++ b/pages/about.html
@@ -105,13 +105,13 @@
                 </div>
 
                 <div class="image-about">
-                    <img src="../assets/img/Germany.jpg" alt="Ảnh công ty SADAKA HR">
+                    <img src="../public/img/ThucTe_Duc_18.jpg" alt="Ảnh công ty SADAKA HR">
                 </div>
             </section>
             <!-- Section 2 -->
             <section class="content">
                 <div class="image-about">
-                    <img src="../assets/img/Slider_2.jpg" alt="Ảnh nước Đức">
+                    <img src="../public/img/ThucTe_Duc_17.jpg" alt="Ảnh nước Đức">
                 </div>
 
                 <div class="about-sadaka">
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="image-about">
-                    <img src="../assets/img/Slider_3.jpg" alt="Ảnh sứ mệnh">
+                    <img src="../public/img/ThucTe_11.jpg" alt="Ảnh sứ mệnh">
                 </div>
             </section>
 
